fix search bar and popup issue on mobile and desktop

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -675,19 +675,19 @@ body {
         transform: rotate(45deg); }
     .searchbox__cover #searchResult .search__items .item__single {
       margin-bottom: 0; }
-      .searchbox__cover #searchResult .search__items .item__single .item__single-img {
+      .searchbox__cover #searchResult .search__items .item__single-img {
         height: 98px; }
-      .searchbox__cover #searchResult .search__items .item__single .item__single-title {
+      .searchbox__cover #searchResult .search__items .item__single-title {
         -webkit-line-clamp: 2;
         display: -webkit-box;
         -webkit-box-orient: vertical;
         white-space: normal;
         height: 35px;
         overflow: hidden; }
-        .searchbox__cover #searchResult .search__items .item__single .item__single-title a {
+        .searchbox__cover #searchResult .search__items .item__single-title a {
           color: #000000;
           text-decoration: none; }
-          .searchbox__cover #searchResult .search__items .item__single .item__single-title a:hover {
+          .searchbox__cover #searchResult .search__items .item__single-title a:hover {
             color: #5CD79E; }
       .searchbox__cover #searchResult .search__items .item__single p {
         margin-bottom: 0;
@@ -1541,7 +1541,7 @@ body {
   .material__items .item__single-desc {
     margin-bottom: 10px !important; }
   #materialenModal {
-    margin-top: 8%; }
+    padding-top: 8% !important; }
   .modal_team_content {
     width: 75% !important; }
     .modal_team_content .teampopup__cover {
@@ -1594,7 +1594,26 @@ body {
   .projecten__single-img {
     margin-right: 0 !important; }
   .modal .close {
-    line-height: 26px; } }
+    line-height: 26px; }
+  #teamModal .modal_team_content {
+    width: 100% !important;
+    padding: 10px; }
+    #teamModal .modal_team_content .teampopup__cover {
+      margin-bottom: 10px; }
+      #teamModal .modal_team_content .teampopup__cover-img {
+        max-width: 100% !important;
+        margin-bottom: 15px; }
+        #teamModal .modal_team_content .teampopup__cover-img-figure {
+          margin-bottom: 10px;
+          height: 180px !important; }
+  #teamModal.modal {
+    padding: 20px 20px 20px 20px;
+    z-index: 999999 !important; }
+  .modal {
+    z-index: 999999 !important; }
+  .social-icon-cover .icon-social-cover a i {
+    padding: 4px 10px;
+    line-height: 28px; } }
 
 @media only screen and (max-width: 1366px) {
   .itspublic__heromain .elementor-heading-title {
